[package]
name = "teraformer"
version = "0.4.0"
edition = "2021"

[dependencies]
tera = "1.17"
clap = { version = "4.0", features = ["derive"] }
owo-colors = "3"
serde = "1.0"
thiserror = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.5"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
